fix: z-index for error and warning (#79)

--- a/src/styles/nodes.less
+++ b/src/styles/nodes.less
@@ -1,4 +1,6 @@
 .sn-org-chart {
+  overflow: hidden;
+
   .sn-org-nodes {
     position: absolute;
     transform-origin: 0% 0%;
